# vefil-workbench

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.streamlit/: config.toml  style.css
docs/: ARCHITECTURE.md  DEPLOYMENT.md  METHODOLOGY.md
src/vefil/: __init__.py
src/vefil/adversarial/: __init__.py  crisis.py  hedging.py  wrappers.py
src/vefil/analysis/: __init__.py  calibration.py  changelog.py  regime.py  scenarios.py  sensitivity.py
src/vefil/assistant/: __init__.py  openai_assistant.py
src/vefil/behavior/: __init__.py  adoption.py  cohorts.py  opportunity_cost.py
src/vefil/config/: __init__.py  defaults.yaml  loader.py  schema.py
src/vefil/engine/: accounting.py  capital_flow.py  lending.py  rewards.py
src/vefil/externalities/: __init__.py  hardware.py  network_growth.py  storage_pricing.py
src/vefil/reporting/: __init__.py  charts.py  export.py
src/vefil/simulation/: __init__.py  monte_carlo.py  runner.py
src/vefil/validation/: __init__.py  sanity_checks.py
tests/: __init__.py  test_assistant.py  test_model_realism.py  test_regime.py  test_smoke.py  test_snapshots.py
